--- a/agency/linux/arch/arm/configs/rpi4_lora_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_lora_defconfig
@@ -3802,6 +3802,7 @@ CONFIG_SOOLINK_PLUGIN_BLUETOOTH=y
 #
 CONFIG_VDUMMY_BACKEND=y
 CONFIG_VUART_BACKEND=y
+CONFIG_VTEMP_BACKEND=y
 # CONFIG_VINPUT_BACKEND is not set
 # CONFIG_VDOGA12V6NM_BACKEND is not set
 # CONFIG_VWEATHER_BACKEND is not set
