--- a/agency/linux/soo/drivers/Makefile
+++ b/agency/linux/soo/drivers/Makefile
@@ -13,3 +13,4 @@ obj-$(CONFIG_VINPUT_BACKEND)	+= vinputback/
 obj-$(CONFIG_VLEDS_BACKEND)		+= vledsback/
 obj-$(CONFIG_VFB_BACKEND)  += vfbback/
 obj-$(CONFIG_VNET_BACKEND)  += vnetback/
+obj-$(CONFIG_VTEMP_BACKEND)  += vtempback/
