WiP: added support for RPi4 sense

--- a/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -75,8 +75,7 @@
 	
 		/* Backends */
 		backends {
-			compatible = "arm,soo";
-
+	
 			vdummy {
 				compatible = "vdummy,backend";
 				status = "ok";
@@ -89,11 +88,16 @@
 		
 			vuihandler {
 				compatible = "vuihandler,backend";
-				status = "disabled";
+				status = "ok";
 			};
 
 			vnet {
 				compatible = "vnet,backend";
+				status = "disabled";
+			};
+			
+			vsenseled {
+				compatible = "vsenseled,backend";
 				status = "ok";
 			};
 		
