Added a compatible property in agency node to use platform_driver in module correctly

--- a/agency/linux/arch/arm/boot/dts/vexpress-tz.dts
+++ b/agency/linux/arch/arm/boot/dts/vexpress-tz.dts
@@ -291,6 +291,12 @@
 			arm,vexpress-sysreg,func = <13 0>;
 			label = "Cores";
 		};
+		
+		vsenseled {
+				
+					compatible = "vsenseled,backend";
+				};
+		
 	};
 
 	smb@8000000 {
@@ -365,9 +371,21 @@
 				<0 3 &gic 0 39 4>;
 	};
 	
+	l0 {
+		compatible = "soo,agency";
+		
+		vsenseled {
+		
+			compatible = "vsenseled,backend";
+		};
+		 
+	};
+	
 	agency {
 		domain-size = <0x20000000>; /* 512 MB */	
 	
+		compatible = "agency,vexpress"; 
+				
 		/* Backends */
 
 		backends {
@@ -386,9 +404,15 @@
 				compatible = "vuihandler,backend";
 				status = "disabled";
 			};
+			
 			vnet {
 				compatible = "vnet,backend";
 				status = "disabled";
+			};
+			
+			vsenseled {
+				compatible = "vsenseled,backend";
+				status = "ok";
 			};
 		};
 	};
