--- a/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -72,11 +72,11 @@
 	agency {
 		domain-size = <0x20000000>; /* 512 MB */
 	
+		compatible = "agency,rpi4"; 
 	
 		/* Backends */
 		backends {
-			compatible = "arm,soo";
-
+	
 			vdummy {
 				compatible = "vdummy,backend";
 				status = "ok";
