--- a/agency/linux/arch/arm/boot/dts/vexpress-tz.dts
+++ b/agency/linux/arch/arm/boot/dts/vexpress-tz.dts
@@ -368,6 +368,8 @@
 	agency {
 		domain-size = <0x20000000>; /* 512 MB */	
 	
+		compatible = "agency,vexpress"; 
+				
 		/* Backends */
 
 		backends {
