Added the SOO.ledctrl ME which switch on a (logical) LED corresponding to joystick position

--- a/ME/base/so3/dts/so3virt.dtsi
+++ b/ME/base/so3/dts/so3virt.dtsi
@@ -91,7 +91,17 @@
             	compatible = "vweather,frontend";
             	status = "disabled";
         	};
+        	
+        	vsenseled {
+            	compatible = "vsenseled,frontend";
+            	status = "disabled";
+        	};
 			
+        	vsensej {
+            	compatible = "vsensej,frontend";
+            	status = "disabled";
+        	};
+        	
 		};
 	
 	};
