--- a/ME/base/so3/soo/drivers/Makefile
+++ b/ME/base/so3/soo/drivers/Makefile
@@ -5,3 +5,5 @@ obj-$(CONFIG_VUART_FRONTEND) += vuartfront/
 obj-$(CONFIG_VDOGA12V6NM_FRONTEND) += vdoga12v6nmfront/
 obj-$(CONFIG_VWEATHER_FRONTEND) += vweatherfront/
 obj-$(CONFIG_VUIHANDLER_FRONTEND) += vuihandlerfront/
+obj-$(CONFIG_VSENSELED_FRONTEND) += vsenseledfront/
+obj-$(CONFIG_VSENSEJ_FRONTEND) += vsensejfront/
