--- a/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -101,7 +101,11 @@
 				compatible = "vsenseled,backend";
 				status = "ok";
 			};
-		
+			
+			vsensej {
+				compatible = "vsensej,backend";
+				status = "ok";
+			};
 		};
 	};
 
