--- a/ME/base/so3/dts/Makefile
+++ b/ME/base/so3/dts/Makefile
@@ -14,5 +14,6 @@ dtb-$(CONFIG_SOO_OUTDOOR) += outdoor.dtb
 dtb-$(CONFIG_SOO_BLIND) += blind.dtb
 dtb-$(CONFIG_SOO_AGENCY) += agency.dtb
 dtb-$(CONFIG_SOO_NET) += net.dtb
+dtb-$(CONFIG_SOO_LEDCTRL) += ledctrl.dtb
 
 
