Add vtemp front/back driver and ME SOO.Heat + some adaptation to use UART1 for lora module

--- a/ME/base/so3/dts/so3virt.dtsi
+++ b/ME/base/so3/dts/so3virt.dtsi
@@ -91,6 +91,11 @@
             	compatible = "vweather,frontend";
             	status = "disabled";
         	};
+            
+            vtemp {
+            	compatible = "vtemp,frontend";
+            	status = "disabled";
+        	};
 			
 		};
 	
