--- a/agency/rootfs/configs/rpi4_defconfig
+++ b/agency/rootfs/configs/rpi4_defconfig
@@ -2483,7 +2483,7 @@ BR2_PACKAGE_BIND=y
 # BR2_PACKAGE_BIND_SERVER is not set
 # BR2_PACKAGE_BIND_TOOLS is not set
 # BR2_PACKAGE_BIRD is not set
-# BR2_PACKAGE_BLUEZ_TOOLS is not set
+BR2_PACKAGE_BLUEZ_TOOLS=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 # BR2_PACKAGE_BLUEZ5_UTILS_OBEX is not set
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
