[vuihandler]: Add vuihandler in the DTS and configs

--- a/ME/base/so3/dts/so3virt.dtsi
+++ b/ME/base/so3/dts/so3virt.dtsi
@@ -74,7 +74,7 @@
 	
 			vuihandler {
 				compatible = "vuihandler,frontend";
-				status = "disabled";
+				status = "ok";
 			};
     
 			vuart {
