ME SOO.heat with front and backend OK without logic

--- a/ME/base/so3/configs/heat_defconfig
+++ b/ME/base/so3/configs/heat_defconfig
@@ -83,6 +83,7 @@ CONFIG_SOO_HEAT=y
 # SOO Mobile Entity frontend drivers
 #
 CONFIG_VTEMP_FRONTEND=y
+CONFIG_VVALVE_FRONTEND=y
 CONFIG_VUART_FRONTEND=y
 # CONFIG_VDUMMY_FRONTEND is not set
 # CONFIG_VFB_FRONTEND is not set
