--- a/ME/base/so3/dts/so3virt.dtsi
+++ b/ME/base/so3/dts/so3virt.dtsi
@@ -96,6 +96,11 @@
             	compatible = "vtemp,frontend";
             	status = "disabled";
         	};
+            
+            vvalve {
+            	compatible = "vvalve,frontend";
+            	status = "disabled";
+        	};
 			
 		};
 	
