--- a/agency/linux/arch/arm/configs/rpi4_lora_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_lora_defconfig
@@ -3800,9 +3800,11 @@ CONFIG_SOOLINK_PLUGIN_BLUETOOTH=y
 #
 # Smart Object Oriented subsystem
 #
-CONFIG_VDUMMY_BACKEND=y
 CONFIG_VUART_BACKEND=y
 CONFIG_VTEMP_BACKEND=y
+CONFIG_VVALVE_BACKEND=y
+CONFIG_LORA_SOO_HEAT_BASE=y
+# CONFIG_VDUMMY_BACKEND is not set
 # CONFIG_VINPUT_BACKEND is not set
 # CONFIG_VDOGA12V6NM_BACKEND is not set
 # CONFIG_VWEATHER_BACKEND is not set
