--- a/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b-lora.dts
+++ b/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b-lora.dts
@@ -71,6 +71,11 @@
 		status = "okay";
 	};
 
+	lora_soo {
+		compatible = "lora,soo-heat-base";
+		status = "okay";
+	};
+
 	agency {
 		domain-size = <0x20000000>; /* 512 MB */
 	
@@ -81,7 +86,7 @@
 
 			vdummy {
 				compatible = "vdummy,backend";
-				status = "ok";
+				status = "disabled";
 			};
 	
 			vuart {
@@ -101,7 +106,12 @@
 
 			vtemp {
 				compatible = "vtemp,backend";
-				status = "ok";
+				status = "okay";
+			};
+
+			vvalve {
+				compatible = "vvalve,backend";
+				status = "okay";
 			};
 		
 		};
