--- a/agency/linux/soo/soolink/lib/Makefile
+++ b/agency/linux/soo/soolink/lib/Makefile
@@ -1,2 +1,2 @@
 
-obj-$(CONFIG_SOOLINK_PLUGIN_ETHERNET) += tcpbridge.o socketmgr.o
+obj-$(CONFIG_SOOLINK_PLUGIN_ETHERNET) += tcpbridge.o socketmgr.o tcpClient.o
