[vweather]: Frontend + outdoor app update

--- a/ME/base/so3/soo/me/Makefile
+++ b/ME/base/so3/soo/me/Makefile
@@ -5,5 +5,7 @@ obj-$(CONFIG_SOO_BLIND) += blind/
 obj-$(CONFIG_SOO_AGENCY) += agency/
 obj-$(CONFIG_SOO_NET) += net/
 
+obj-y += eco_stability.o
+
 
 
