--- a/agency/linux/arch/arm/configs/rpi4_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_defconfig
@@ -3821,7 +3821,7 @@ CONFIG_VUART_BACKEND=y
 # CONFIG_VINPUT_BACKEND is not set
 # CONFIG_VDOGA12V6NM_BACKEND is not set
 CONFIG_VWEATHER_BACKEND=y
-CONFIG_VUIHANDLER_BACKEND=y
+# CONFIG_VUIHANDLER_BACKEND is not set
 # CONFIG_VLEDS_BACKEND is not set
 # CONFIG_VFB_BACKEND is not set
 # end of Smart Object Oriented subsystem
