[vdoga]: Add DS1050 and DRV8703 drivers and complete the DTS

--- a/agency/linux/arch/arm/configs/rpi4_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_defconfig
@@ -1158,8 +1158,8 @@ CONFIG_BLK_DEV_RAM_SIZE=4096
 # CONFIG_SRAM is not set
 # CONFIG_XILINX_SDFEC is not set
 # CONFIG_PVPANIC is not set
-# CONFIG_DRV8703 is not set
-# CONFIG_DS1050 is not set
+CONFIG_DRV8703=y
+CONFIG_DS1050=y
 # CONFIG_C2PORT is not set
 
 #
