added from bt_test
Former-commit-id: 4a9ae18ad32da5e08bef14870c1ba9e0f10dba5e

--- a/agency/linux/arch/arm/configs/rpi4_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_defconfig
@@ -3809,7 +3809,7 @@ CONFIG_DCM_LZ4=y
 #
 CONFIG_SOOLINK_PLUGIN_WLAN=y
 CONFIG_SOOLINK_PLUGIN_ETHERNET=y
-CONFIG_SOOLINK_PLUGIN_BLUETOOTH=y
+# CONFIG_SOOLINK_PLUGIN_BLUETOOTH is not set
 # CONFIG_SOOLINK_PLUGIN_LOOPBACK is not set
 # end of Soolink plugins
 
