--- a/agency/usr/apps/CMakeLists.txt
+++ b/agency/usr/apps/CMakeLists.txt
@@ -12,3 +12,6 @@ add_executable(melist melist.c)
 
 target_link_libraries(saveme zip)
 target_link_libraries(restoreme zip)
+
+add_executable(bt_test bt_test.c)
+target_link_libraries(bt_test pthread)
