[agency][usr]: Add libroxml to the userspace
Former-commit-id: 041e029c9c9e203e21da0ea206c633542b513ea0

--- a/agency/usr/CMakeLists.txt
+++ b/agency/usr/CMakeLists.txt
@@ -23,6 +23,7 @@ set(CMAKE_C_FLAGS_RELEASE "-Wall -Wstrict-prototypes -O2 -fomit-frame-pointer -s
 add_subdirectory(core)
 add_subdirectory(dcm)
 add_subdirectory(frozen)
+add_subdirectory(libroxml)
 
 add_subdirectory(apps)
 add_subdirectory(lib)
