[agency][usr]: Add bt_test app, which uses the libroxml
Former-commit-id: 13e2206ff7151b0ba5e70f888c0acdfd08a53e92

--- a/agency/usr/apps/CMakeLists.txt
+++ b/agency/usr/apps/CMakeLists.txt
@@ -14,4 +14,4 @@ target_link_libraries(saveme zip)
 target_link_libraries(restoreme zip)
 
 add_executable(bt_test bt_test.c)
-target_link_libraries(bt_test pthread)
+target_link_libraries(bt_test roxml pthread)
