Add ME SOO.indoor, SOO.heat; Driver BE venoceansw, vdogablind, vtemp, vvalve; Driver FE vtemp, vvalve, and SOO.indoor coop with SOO.heat

--- a/ME/base/so3/configs/heat_defconfig
+++ b/ME/base/so3/configs/heat_defconfig
@@ -82,9 +82,11 @@ CONFIG_SOO_HEAT=y
 #
 # SOO Mobile Entity frontend drivers
 #
-CONFIG_VTEMP_FRONTEND=y
+# CONFIG_VTEMP_FRONTEND is not set
 CONFIG_VVALVE_FRONTEND=y
 CONFIG_VUART_FRONTEND=y
+# CONFIG_VENOCEANSW_FRONTEND is not set
+# CONFIG_VDOGABLIND_FRONTEND is not set
 # CONFIG_VDUMMY_FRONTEND is not set
 # CONFIG_VFB_FRONTEND is not set
 # CONFIG_VINPUT_FRONTEND is not set
