--- a/ME/base/so3/dts/Makefile
+++ b/ME/base/so3/dts/Makefile
@@ -15,5 +15,7 @@ dtb-$(CONFIG_SOO_BLIND) += blind.dtb
 dtb-$(CONFIG_SOO_AGENCY) += agency.dtb
 dtb-$(CONFIG_SOO_NET) += net.dtb
 dtb-$(CONFIG_SOO_HEAT) += heat.dtb
+dtb-$(CONFIG_SOO_INDOOR) += indoor.dtb
+dtb-$(CONFIG_SOO_DOMO) += domo.dtb
 
 
