--- a/ME/base/so3/dts/so3virt.dtsi
+++ b/ME/base/so3/dts/so3virt.dtsi
@@ -101,6 +101,16 @@
             	compatible = "vvalve,frontend";
             	status = "disabled";
         	};
+            
+            vdogablind {
+            	compatible = "vdogablind,frontend";
+            	status = "disabled";
+        	};
+            
+            venoceansw {
+            	compatible = "venoceansw,frontend";
+            	status = "disabled";
+        	};
 			
 		};
 	
