--- a/ME/base/so3/soo/me/Makefile
+++ b/ME/base/so3/soo/me/Makefile
@@ -5,8 +5,10 @@ obj-$(CONFIG_SOO_BLIND) += blind/
 obj-$(CONFIG_SOO_AGENCY) += agency/
 obj-$(CONFIG_SOO_NET) += net/
 obj-$(CONFIG_SOO_HEAT) += heat/
+obj-$(CONFIG_SOO_INDOOR) += indoor/
+obj-$(CONFIG_SOO_DOMO) += domo/
 
-obj-y += eco_stability.o
+# obj-y += eco_stability.o
 
 
 
