--- a/ME/base/so3/soo/drivers/Makefile
+++ b/ME/base/so3/soo/drivers/Makefile
@@ -7,3 +7,5 @@ obj-$(CONFIG_VWEATHER_FRONTEND) += vweatherfront/
 obj-$(CONFIG_VUIHANDLER_FRONTEND) += vuihandlerfront/
 obj-$(CONFIG_VTEMP_FRONTEND) += vtempfront/
 obj-$(CONFIG_VVALVE_FRONTEND) += vvalvefront/
+obj-$(CONFIG_VDOGABLIND_FRONTEND) += vdogablindfront/
+obj-$(CONFIG_VENOCEANSW_FRONTEND) += venoceanswfront/
