--- a/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b-lora.dts
+++ b/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b-lora.dts
@@ -11,8 +11,8 @@
 	chosen {
 	 	/* bootargs = "console=ttyAMA0,115200n8 root=/dev/ram rw slub_debug=PUZ"; */
  	   /*  bootargs = "coherent_pool=1M 8250.nr_uarts=1 cma=64M cma=256M  smsc95xx.macaddr=DC:A6:32:18:DD:95 vc_mem.mem_base=0x3ec00000 vc_mem.mem_size=0x40000000  console=serial0,115200 console=tty1 root=/dev/ram elevator=deadline fsck.repair=yes rootwait"; */
-	/*bootargs = "coherent_pool=1M 8250.nr_uarts=1 cma=64M cma=256M  smsc95xx.macaddr=DC:A6:32:18:DD:95 vc_mem.mem_base=0x3ec00000 vc_mem.mem_size=0x40000000  console=ttyS0,115200 root=/dev/ram elevator=deadline fsck.repair=yes rootwait";*/
-	bootargs = "coherent_pool=1M 8250.nr_uarts=1 cma=64M cma=256M  smsc95xx.macaddr=DC:A6:32:18:DD:95 vc_mem.mem_base=0x3ec00000 vc_mem.mem_size=0x40000000  console=ttyAMA2,115200 root=/dev/ram elevator=deadline fsck.repair=yes rootwait";
+	bootargs = "coherent_pool=1M 8250.nr_uarts=1 cma=64M cma=256M  smsc95xx.macaddr=DC:A6:32:18:DD:95 vc_mem.mem_base=0x3ec00000 vc_mem.mem_size=0x40000000  console=ttyS0,115200 root=/dev/ram elevator=deadline fsck.repair=yes rootwait";
+	/*bootargs = "coherent_pool=1M 8250.nr_uarts=1 cma=64M cma=256M  smsc95xx.macaddr=DC:A6:32:18:DD:95 vc_mem.mem_base=0x3ec00000 vc_mem.mem_size=0x40000000  console=ttyAMA2,115200 root=/dev/ram elevator=deadline fsck.repair=yes rootwait";*/
 
 #if 0 /* SOO.tech */
 		/* 8250 auxiliary UART instead of pl011 */
@@ -29,7 +29,7 @@
 	aliases {
 		serial0 = &uart1;
 		serial1 = &uart0;
-		serial2 = &uart5;
+		serial5 = &uart5;
 		mmc0 = &emmc2;
 		mmc2 = &sdhost;
 		i2c3 = &i2c3;
@@ -104,14 +104,10 @@
 				status = "ok";
 			};
 
-			vtemp {
-				compatible = "vtemp,backend";
-				status = "okay";
-			};
-
 			vvalve {
 				compatible = "vvalve,backend";
 				status = "okay";
+				tty_port = "ttyAMA5";
 			};
 		
 		};
