--- a/agency/linux/arch/arm/configs/rpi4_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_defconfig
@@ -1159,7 +1159,7 @@ CONFIG_BLK_DEV_RAM_SIZE=4096
 # CONFIG_XILINX_SDFEC is not set
 # CONFIG_PVPANIC is not set
 # CONFIG_DRV8703 is not set
-# CONFIG_DS1050 is not set
+CONFIG_DS1050=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1625,7 +1625,7 @@ CONFIG_DEVMEM=y
 # Serial drivers
 #
 CONFIG_SERIAL_EARLYCON=y
-CONFIG_SERIAL_8250=y
+CONFIG_SERIAL_8250=y set # SOO disable for vwaether use only Sense Hat
 # CONFIG_SERIAL_8250_DEPRECATED_OPTIONS is not set
 # CONFIG_SERIAL_8250_FINTEK is not set
 CONFIG_SERIAL_8250_CONSOLE=y
@@ -3017,7 +3017,7 @@ CONFIG_EXTCON=y
 # CONFIG_EXTCON_SM5502 is not set
 # CONFIG_EXTCON_USB_GPIO is not set
 # CONFIG_MEMORY is not set
-# CONFIG_IIO is not set
+CONFIG_IIO=y # SOO : rpisense hts sensor
 CONFIG_PWM=y
 CONFIG_PWM_SYSFS=y
 CONFIG_PWM_BCM2835=y
@@ -3816,13 +3816,26 @@ CONFIG_SOOLINK_PLUGIN_BLUETOOTH=y
 #
 # Smart Object Oriented subsystem
 #
-CONFIG_VDUMMY_BACKEND=y
 CONFIG_VUART_BACKEND=y
+# SOO.Blind VDOGA
+# CONFIG_VDOGABLIND_BACKEND is not set
+# CONFIG_VENOCEANSW_BACKEND is not set
+# END SOO.Blind VDOGA
+# SOO.Heat
+CONFIG_VTEMP_BACKEND=y
+# CONFIG_LORA_SOO_HEAT_BASE=y
+# CONFIG_VVALVE_BACKEND=y
+# end SOO.Heat
+# CONFIG_VWEATHER_BACKEND is not set
+# CONFIG_VDUMMY_BACKEND is not set
 # CONFIG_VINPUT_BACKEND is not set
 # CONFIG_VDOGA12V6NM_BACKEND is not set
-CONFIG_VWEATHER_BACKEND=y
-CONFIG_VUIHANDLER_BACKEND=y
+# CONFIG_VUIHANDLER_BACKEND=y
 # CONFIG_VLEDS_BACKEND is not set
 # CONFIG_VFB_BACKEND is not set
 # end of Smart Object Oriented subsystem
 # end of SOO Framework and subsystems
+
+# CONFIG TO ACCESS HTS221 ON RPI SENSE HAT (SOO)
+CONFIG_HTS221=y
+CONFIG_HTS221_I2C=y
