--- a/agency/linux/arch/arm/configs/rpi4_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_defconfig
@@ -3817,15 +3817,22 @@ CONFIG_SOOLINK_PLUGIN_BLUETOOTH=y
 # Smart Object Oriented subsystem
 #
 CONFIG_VUART_BACKEND=y
+
 # SOO.Blind VDOGA
 # CONFIG_VDOGABLIND_BACKEND is not set
 # CONFIG_VENOCEANSW_BACKEND is not set
 # END SOO.Blind VDOGA
+
 # SOO.Heat
-CONFIG_VTEMP_BACKEND=y
+# CONFIG_VTEMP_BACKEND is not set
 # CONFIG_LORA_SOO_HEAT_BASE=y
 # CONFIG_VVALVE_BACKEND=y
 # end SOO.Heat
+
+# SOO.knxblind
+CONFIG_VKNXBLIND_BACKEND=y
+# end SOO.knxblind
+
 # CONFIG_VWEATHER_BACKEND is not set
 # CONFIG_VDUMMY_BACKEND is not set
 # CONFIG_VINPUT_BACKEND is not set
