--- a/ME/base/so3/dts/knxblind.dts
+++ b/ME/base/so3/dts/knxblind.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2018-2019 Daniel Rossier <daniel.rossier@soo.tech>
+ * Copyright (C) 2016-2018 Thomas Rieder <thomas.rieder@heig-vd.ch>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -18,33 +18,36 @@
 
 /dts-v1/;
 
-/ {
-	description = "SO3 image for the SOO.heat ME (without rootfs)";
+#include "so3virt.dtsi"
 
-	images {
+&ME {
+	/* 4 MB is enough */
+	domain-size = <0x1000000>;
 	
-		so3 {
-			description = "SO3 OS kernel";
-			data = /incbin/("../so3/so3.bin");
-			type = "ME";
-			arch = "arm";
-			os = "linux";
-			compression = "none";
+	/* SPID on 128-bit encoding */
+	spid = /bits/ 64 <0x002000000000000c>;
+		
+	/* Name of this ME */
+	me_name = "SOO.knxblind";
+		
+	/* Short description */
+	me_shortdesc =
 			
-			hash {
-				algo = "crc32";
-			};
+"SOO.knxblind is able to command Lahoco Blind using KNX protocokl";
+
+	frontends {
+		/* Enabling the console */
+		vuart {
+			status = "ok";
 		};
 
-		fdt {
-			description = "Flattened Device Tree blob";
-			data = /incbin/("../so3/dts/heat.dtb");
-			type = "flat_dt";
-			arch = "arm";
-			compression = "none";
-			hash {
-				algo = "crc32";
-			};
-		};	
-    };
+		vuihandler {
+			status = "disabled";
+		};
+	
+		vknxblind {
+			status = "ok";
+		};
+	};
 };
+	
