--- a/agency/usr/apps/CMakeLists.txt
+++ b/agency/usr/apps/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(injector injector.c)
 add_executable(saveme saveme.c)
 add_executable(restoreme restoreme.c)
 add_executable(shutdownme shutdownme.c)
+add_executable(usart usart.c)
 
 add_executable(melist melist.c)
 
