--- a/ME/base/so3/soo/me/Makefile
+++ b/ME/base/so3/soo/me/Makefile
@@ -1,4 +1,6 @@
 
+obj-y += common.o
+
 obj-$(CONFIG_SOO_REFSO3) += refso3/
 obj-$(CONFIG_SOO_OUTDOOR) += outdoor/
 obj-$(CONFIG_SOO_BLIND) += blind/
@@ -6,8 +8,6 @@ obj-$(CONFIG_SOO_AGENCY) += agency/
 obj-$(CONFIG_SOO_NET) += net/
 obj-$(CONFIG_SOO_LEDCTRL) += ledctrl/
 
-
-obj-y += eco_stability.o
 
 
 
