--- a/u-boot/configs/rpi_4_32b_defconfig
+++ b/u-boot/configs/rpi_4_32b_defconfig
@@ -253,7 +253,17 @@ CONFIG_SYS_SRAM_SIZE=0x0
 # Boot images
 #
 # CONFIG_ANDROID_BOOT_IMAGE is not set
-# CONFIG_FIT is not set
+CONFIG_FIT=y
+CONFIG_FIT_EXTERNAL_OFFSET=0x0
+CONFIG_FIT_ENABLE_SHA256_SUPPORT=y
+# CONFIG_FIT_ENABLE_SHA384_SUPPORT is not set
+# CONFIG_FIT_ENABLE_SHA512_SUPPORT is not set
+CONFIG_FIT_FULL_CHECK=y
+# CONFIG_FIT_SIGNATURE is not set
+# CONFIG_FIT_CIPHER is not set
+CONFIG_FIT_VERBOSE=y
+# CONFIG_FIT_BEST_MATCH is not set
+CONFIG_FIT_PRINT=y
 CONFIG_LEGACY_IMAGE_FORMAT=y
 CONFIG_SUPPORT_RAW_INITRD=y
 CONFIG_OF_BOARD_SETUP=y
@@ -286,7 +296,7 @@ CONFIG_BOOTSTAGE_STASH_SIZE=0x1000
 # Autoboot options
 #
 CONFIG_AUTOBOOT=y
-CONFIG_BOOTDELAY=2
+CONFIG_BOOTDELAY=0
 # CONFIG_AUTOBOOT_KEYED is not set
 # CONFIG_AUTOBOOT_USE_MENUKEY is not set
 # CONFIG_USE_BOOTARGS is not set
@@ -351,6 +361,8 @@ CONFIG_HASH=y
 #
 # Update support
 #
+# CONFIG_UPDATE_TFTP is not set
+# CONFIG_UPDATE_FIT is not set
 # CONFIG_ANDROID_AB is not set
 
 #
@@ -399,6 +411,7 @@ CONFIG_CMD_CONSOLE=y
 #
 CONFIG_CMD_BOOTD=y
 CONFIG_CMD_BOOTM=y
+CONFIG_BOOTM_EFI=y
 CONFIG_CMD_BOOTZ=y
 CONFIG_BOOTM_LINUX=y
 CONFIG_BOOTM_NETBSD=y
@@ -507,9 +520,7 @@ CONFIG_CMD_PINMUX=y
 # CONFIG_CMD_SDRAM is not set
 # CONFIG_CMD_TSI148 is not set
 # CONFIG_CMD_UNIVERSE is not set
-CONFIG_CMD_USB=y
 # CONFIG_CMD_USB_SDP is not set
-# CONFIG_CMD_USB_MASS_STORAGE is not set
 
 #
 # Shell scripting commands
@@ -568,7 +579,6 @@ CONFIG_CMD_BLOCK_CACHE=y
 # CONFIG_CMD_DATE is not set
 # CONFIG_CMD_TIME is not set
 # CONFIG_CMD_GETTIME is not set
-# CONFIG_CMD_RNG is not set
 CONFIG_CMD_SLEEP=y
 # CONFIG_MP is not set
 # CONFIG_CMD_TIMER is not set
@@ -777,7 +787,6 @@ CONFIG_CAAM_64BIT=y
 # DFU support
 #
 CONFIG_DFU=y
-CONFIG_DFU_OVER_USB=y
 # CONFIG_DFU_TFTP is not set
 # CONFIG_DFU_TIMEOUT is not set
 CONFIG_DFU_MMC=y
@@ -795,7 +804,6 @@ CONFIG_DFU_MMC=y
 #
 # Fastboot support
 #
-# CONFIG_USB_FUNCTION_FASTBOOT is not set
 # CONFIG_UDP_FUNCTION_FASTBOOT is not set
 # CONFIG_FIRMWARE is not set
 # CONFIG_ZYNQMP_FIRMWARE is not set
@@ -1127,16 +1135,9 @@ CONFIG_PINCTRL_BCM283X=y
 #
 # Reset Controller Support
 #
-CONFIG_DM_RESET=y
-# CONFIG_RESET_AST2500 is not set
-# CONFIG_RESET_AST2600 is not set
-# CONFIG_RESET_HISILICON is not set
-# CONFIG_RESET_SYSCON is not set
-CONFIG_RESET_RASPBERRYPI=y
+# CONFIG_DM_RESET is not set
 # CONFIG_RESET_SCMI is not set
-CONFIG_DM_RNG=y
-# CONFIG_RNG_MSM is not set
-CONFIG_RNG_IPROC200=y
+# CONFIG_DM_RNG is not set
 
 #
 # Real Time Clock
@@ -1230,86 +1231,7 @@ CONFIG_PL01X_SERIAL=y
 #
 # TPM support
 #
-CONFIG_USB=y
-CONFIG_DM_USB=y
-CONFIG_DM_USB_GADGET=y
-
-#
-# USB Host Controller Drivers
-#
-CONFIG_USB_HOST=y
-CONFIG_USB_XHCI_HCD=y
-# CONFIG_USB_XHCI_DWC3 is not set
-# CONFIG_USB_XHCI_DWC3_OF_SIMPLE is not set
-CONFIG_USB_XHCI_PCI=y
-# CONFIG_USB_XHCI_FSL is not set
-# CONFIG_USB_XHCI_BRCM is not set
-# CONFIG_USB_EHCI_HCD is not set
-# CONFIG_USB_OHCI_HCD is not set
-# CONFIG_USB_OHCI_PCI is not set
-# CONFIG_USB_UHCI_HCD is not set
-# CONFIG_USB_DWC2 is not set
-# CONFIG_USB_R8A66597_HCD is not set
-# CONFIG_USB_CDNS3 is not set
-# CONFIG_USB_DWC3 is not set
-
-#
-# Legacy MUSB Support
-#
-# CONFIG_USB_MUSB_HCD is not set
-# CONFIG_USB_MUSB_UDC is not set
-
-#
-# MUSB Controller Driver
-#
-# CONFIG_USB_MUSB_HOST is not set
-# CONFIG_USB_MUSB_GADGET is not set
-# CONFIG_USB_MUSB_DA8XX is not set
-# CONFIG_USB_MUSB_TI is not set
-# CONFIG_USB_MUSB_AM35X is not set
-# CONFIG_USB_MUSB_DSPS is not set
-# CONFIG_USB_MUSB_PIO_ONLY is not set
-
-#
-# USB Phy
-#
-# CONFIG_TWL4030_USB is not set
-# CONFIG_OMAP_USB_PHY is not set
-# CONFIG_ROCKCHIP_USB2_PHY is not set
-
-#
-# ULPI drivers
-#
-
-#
-# USB peripherals
-#
-CONFIG_USB_STORAGE=y
-CONFIG_USB_KEYBOARD=y
-CONFIG_USB_KEYBOARD_FN_KEYS=y
-CONFIG_SYS_USB_EVENT_POLL=y
-# CONFIG_SYS_USB_EVENT_POLL_VIA_INT_QUEUE is not set
-# CONFIG_SYS_USB_EVENT_POLL_VIA_CONTROL_EP is not set
-CONFIG_USB_GADGET=y
-CONFIG_USB_GADGET_MANUFACTURER="FSL"
-CONFIG_USB_GADGET_VENDOR_NUM=0x0525
-CONFIG_USB_GADGET_PRODUCT_NUM=0xa4a5
-# CONFIG_USB_GADGET_ATMEL_USBA is not set
-# CONFIG_USB_GADGET_BCM_UDC_OTG_PHY is not set
-CONFIG_USB_GADGET_DWC2_OTG=y
-# CONFIG_USB_GADGET_DWC2_OTG_PHY_BUS_WIDTH_8 is not set
-# CONFIG_USB_GADGET_OS_DESCRIPTORS is not set
-# CONFIG_CI_UDC is not set
-CONFIG_USB_GADGET_VBUS_DRAW=2
-CONFIG_SDP_LOADADDR=0
-CONFIG_USB_GADGET_DUALSPEED=y
-CONFIG_USB_GADGET_DOWNLOAD=y
-# CONFIG_USB_FUNCTION_MASS_STORAGE is not set
-# CONFIG_USB_FUNCTION_ROCKUSB is not set
-# CONFIG_USB_FUNCTION_SDP is not set
-# CONFIG_USB_FUNCTION_THOR is not set
-# CONFIG_USB_ETHER is not set
-# CONFIG_USB_HOST_ETHER is not set
+# CONFIG_USB is not set
 
 #
 # UFS Host Controller Support
@@ -1460,11 +1382,11 @@ CONFIG_LIB_RAND=y
 #
 # Hashing Support
 #
-# CONFIG_SHA1 is not set
-# CONFIG_SHA256 is not set
+CONFIG_SHA1=y
+CONFIG_SHA256=y
 # CONFIG_SHA512_ALGO is not set
 # CONFIG_SHA_HW_ACCEL is not set
-# CONFIG_MD5 is not set
+CONFIG_MD5=y
 # CONFIG_SPL_MD5 is not set
 
 #
@@ -1490,7 +1412,9 @@ CONFIG_OF_LIBFDT=y
 CONFIG_OF_LIBFDT_ASSUME_MASK=0
 CONFIG_OF_LIBFDT_OVERLAY=y
 # CONFIG_SPL_OF_LIBFDT is not set
+CONFIG_SPL_OF_LIBFDT_ASSUME_MASK=0xff
 # CONFIG_TPL_OF_LIBFDT is not set
+CONFIG_TPL_OF_LIBFDT_ASSUME_MASK=0xff
 
 #
 # System tables
@@ -1513,7 +1437,6 @@ CONFIG_EFI_UNICODE_CAPITALIZATION=y
 CONFIG_EFI_PLATFORM_LANG_CODES="en-US"
 CONFIG_EFI_HAVE_RUNTIME_RESET=y
 # CONFIG_EFI_GRUB_ARM32_WORKAROUND is not set
-CONFIG_EFI_RNG_PROTOCOL=y
 CONFIG_EFI_LOAD_FILE2_INITRD=y
 # CONFIG_EFI_SECURE_BOOT is not set
 # CONFIG_TEST_FDTDEC is not set
