Removed no_tz configuration and keep only tz enabled for vExpress

--- a/agency/linux/arch/arm/boot/dts/Makefile
+++ b/agency/linux/arch/arm/boot/dts/Makefile
@@ -1201,8 +1201,7 @@ dtb-$(CONFIG_ARCH_VEXPRESS) += \
 	vexpress-v2p-ca9.dtb \
 	vexpress-v2p-ca15-tc1.dtb \
 	vexpress-v2p-ca15_a7.dtb \
-	vexpress-tz.dtb \
-	vexpress-notz.dtb
+	vexpress.dtb
 	
 dtb-$(CONFIG_ARCH_VIRT) += \
 	xenvm-4.2.dtb
