--- a/u-boot/configs/vexpress_defconfig
+++ b/u-boot/configs/vexpress_defconfig
@@ -4,7 +4,7 @@
 #
 
 #
-# Compiler: arm-none-linux-gnueabihf-gcc (GNU Toolchain for the A-profile Architecture 9.2-2019.12 (arm-9.10)) 9.2.1 20191025
+# Compiler: arm-linux-gnueabihf-gcc (Linaro GCC 6.4-2018.05) 6.4.1 20180425 [linaro-6.4-2018.05 revision 7b15d0869c096fe39603ad63dc19ab7cf035eb70]
 #
 CONFIG_CREATE_ARCH_SYMLINK=y
 CONFIG_LINKER_LIST_ALIGN=4
@@ -207,7 +207,6 @@ CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_OPTIMIZE_INLINING is not set
 CONFIG_ARCH_SUPPORTS_LTO=y
 # CONFIG_LTO is not set
-CONFIG_CC_HAS_ASM_INLINE=y
 # CONFIG_XEN is not set
 CONFIG_DISTRO_DEFAULTS=y
 CONFIG_ENV_VARS_UBOOT_CONFIG=y
@@ -282,7 +281,7 @@ CONFIG_BOOTSTAGE_STASH_SIZE=0x1000
 # Autoboot options
 #
 CONFIG_AUTOBOOT=y
-CONFIG_BOOTDELAY=2
+CONFIG_BOOTDELAY=0
 # CONFIG_AUTOBOOT_KEYED is not set
 # CONFIG_AUTOBOOT_USE_MENUKEY is not set
 # CONFIG_USE_BOOTARGS is not set
