--- a/ME/base/usr/CMakeLists.txt
+++ b/ME/base/usr/CMakeLists.txt
@@ -19,7 +19,7 @@ include_directories(
 )
  
 set(CMAKE_C_FLAGS "-Wall -O0 -std=c99  -D_GNU_SOURCE -nostdlib -O0 -pipe -Wall  -D__ARM__ -marm  \
-	-mno-thumb-interwork -march=armv5 -g -ffreestanding -fno-common")
+	-mno-thumb-interwork -g -ffreestanding -fno-common")
 
 set(CMAKE_ASM_FLAGS_DEBUG "-D__ASSEMBLY__")
 set(CMAKE_LINKER "arm-linux-gnueabihf-ld")
