WiP: booting SO3 in the upgraded domain (5.10)

--- a/ME/base/so3/arch/arm32/Makefile
+++ b/ME/base/so3/arch/arm32/Makefile
@@ -1,6 +1,7 @@
+
+obj-y += head.o
 obj-y += setup.o exception.o context.o fault.o
 obj-y += cache_v7_asm.o cache_v7.o cache-cp15.o
-obj-y += boot/ 
 
 obj-$(CONFIG_MMU) += mmu.o
 
