--- a/ME/base/so3/configs/refso3_ramfs_defconfig
+++ b/ME/base/so3/configs/refso3_ramfs_defconfig
@@ -2,17 +2,14 @@
 # Automatically generated file; DO NOT EDIT.
 # SO3 Configuration
 #
-
-#
-# General
-#
+CONFIG_ARCH_ARM32=y
+# CONFIG_ARCH_ARM64 is not set
+CONFIG_ARCH="arm32"
 CONFIG_CROSS_COMPILE="arm-none-linux-gnueabihf-"
-# end of General
 
 #
 # Platform
 #
-CONFIG_STANDALONE=y
 # CONFIG_VEXPRESS is not set
 # CONFIG_RPI4 is not set
 CONFIG_SO3VIRT=y
@@ -44,6 +41,8 @@ CONFIG_RAMDEV=y
 # CONFIG_ARM_TIMER is not set
 # CONFIG_GIC is not set
 CONFIG_VIRQ=y
+# CONFIG_SO3VIRT_FB is not set
+# CONFIG_SO3VIRT_INPUT is not set
 # end of Drivers
 
 #
@@ -78,6 +77,7 @@ CONFIG_SOO_REFSO3=y
 # CONFIG_SOO_OUTDOOR is not set
 # CONFIG_SOO_AGENCY is not set
 # CONFIG_SOO_NET is not set
+# CONFIG_SOO_LEDCTRL is not set
 
 #
 # SOO Mobile Entity frontend drivers
@@ -89,16 +89,18 @@ CONFIG_VUART_FRONTEND=y
 # CONFIG_VDOGA12V6NM_FRONTEND is not set
 # CONFIG_VWEATHER_FRONTEND is not set
 # CONFIG_VUIHANDLER_FRONTEND is not set
+# CONFIG_VNET_FRONTEND is not set
+
+#
+# vnet frontend
+#
+# end of vnet frontend
+
+# CONFIG_VSENSELED_FRONTEND is not set
+# CONFIG_VSENSEJ_FRONTEND is not set
 # end of SOO Mobile Entity frontend drivers
 # end of SOO Mobile Entity - Smart Object Oriented subsystem
 
 # CONFIG_RTOS is not set
 CONFIG_MMU=y
 # CONFIG_DEBUG_PRINTK is not set
-
-#
-# Generated files
-#
-CONFIG_ELF=y
-CONFIG_BIN=y
-# end of Generated files
