WiP: now booting on RPi4 up to the shell prompt

--- a/agency/linux/arch/arm/boot/dts/bcm270x-rpi.dtsi
+++ b/agency/linux/arch/arm/boot/dts/bcm270x-rpi.dtsi
@@ -11,7 +11,10 @@
 		watchdog = &watchdog;
 		random = &random;
 		mailbox = &mailbox;
-		gpio = &gpio;
+		
+		/* SOO.tech - avoid a compilation warning */
+		/*gpio = &gpio;*/
+		
 		uart0 = &uart0;
 		uart1 = &uart1;
 		sdhost = &sdhost;
